edits through expt 1

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -30,6 +30,8 @@
 \usepackage{pifont} %ding
 \usepackage{pst-node}
 %\usepackage{bold-extra}
+\usepackage{color}
+
 
 %\usepackage{natbib}
 
@@ -61,6 +63,8 @@
 
 %\linespread{1.2}
 
+\definecolor{Green}{RGB}{10,200,100}
+\newcommand{\ndg}[1]{\textcolor{Green}{[ndg: #1]}}  
 
 
 
@@ -91,8 +95,9 @@
 \maketitle
 
 \begin{abstract}
-	This paper investigates the role of context in the disambiguation between distributive and collective interpretations of plural predications. We focus on the phenomenon of ``stubborn distributivity,'' whereby certain predicates (e.g., \emph{big}, \emph{tall}) are claimed to lack collective interpretations altogether. First, we establish a method for studying plural predication experimentally, and demonstrate that interpretation choice is mediated by three factors: the immediate linguistic context, the local discourse context, and the broader world context. 
-	Then, we formalize the contributions of context within the Bayesian Rational Speech-Act framework, showing that stubborn distributivity emerges from the reasoning processes of speakers and listeners. 	
+\ndg{note to self: look back at abstract after rest.}
+	What role does context have in the disambiguation between distributive and collective interpretations of plural predications? We focus on the phenomenon of ``stubborn distributivity,'' whereby certain predicates (e.g., \emph{big}, \emph{tall}) are claimed to lack collective interpretations altogether. First, we establish a method for studying plural predication experimentally, and demonstrate that interpretation choice is mediated by three factors: the immediate linguistic context, the local discourse context, and the broader world context. 
+	Then, we formalize the contributions of context within the Bayesian Rational Speech-Acts framework, showing that stubborn distributivity emerges from the reasoning processes of speakers and listeners. 	
 	%, using unambiguous paraphrases to isolate interpretations. Then, we apply our paraphrase endorsement method to naturally-occurring examples from corpora, finding that both the narrow linguistic context and the broader discourse context mediate interpretation choices. Next, we employ the paraphrase endorsement method while manipulating properties of the context directly, and find that the probability of an interpretation depends crucially on potential variability in the property being communicated; the more variable a collective property, the less likely a collective interpretation. Stubbornly distributive predicates name collective properties that are relatively unpredictable in and across contexts (e.g., collective size will depend crucially on the way a set of objects is arranged), which leads to more variable interpretations. A more variable interpretation is potentially less informative because it requires more coordination between speakers and listeners. The interpretation is therefore less useful to speakers for communicating about the state of the world, which makes it less likely. These facts support a general model of rational communication under which the resolution of ambiguities is sensitive to the amount of variability in possible interpretations.  We formalize this pragmatic calculus using a Bayesian Rational Speech-Act model of communication.
 \end{abstract}
 
@@ -108,17 +113,28 @@
 
 \section{Introduction}
 
-The semantics and pragmatics of predicating properties to singular individuals is already a complicated endeavor. What does it mean for a box to be big, or tall, or heavy? How do we represent its size or height or weight? Recent answers to these sorts of questions highlight the central role of context in the calculus of meaning: what properties get ascribed depend crucially on the context of predication \citep[cf.~tall for a boy vs.~tall for a basketball player;  e.g.,][]{kennedy1999,lassitergoodman2013}. The complexity associated with answering these questions explodes one we introduce pluralities into the mix: however difficult the singular case, the plural case is at least $n$ times as complicated, for the $n$ many individuals under consideration. Particularly puzzling is the distributive vs.~collective ambiguity that plural predication gives rise to \citep[e.g.,][]{link1983,link1987,link1998,scha1984,landman1989,landman1989b,landman1996,lasersohn1988,lasersohn1990,lasersohn1995,lasersohn1998,schwarzschild1994,schwarzschild1996}: if we hear that some boxes are heavy, do we infer that each box is, or only that their total weight warrants comment? What factors go into this determination of meaning?
+The semantics and pragmatics of predicating properties to singular individuals is already a complicated endeavor. What does it mean for a box to be big, or tall, or heavy? How do we represent its size or height or weight? Recent answers to these sorts of questions highlight the central role of context in the calculus of meaning: what properties get ascribed depend crucially on the context of predication \citep[cf.~tall for a boy vs.~tall for a basketball player;  e.g.,][]{kennedy1999,lassitergoodman2013}. The complexity associated with answering these questions increases once we introduce pluralities into the mix. 
+%: however difficult the singular case, the plural case is at least $n$ times as complicated, for the $n$ many individuals under consideration. 
+Particularly puzzling is the distributive vs.~collective ambiguity of plural predcation \citep[e.g.,][]{link1983,link1987,link1998,scha1984,landman1989,landman1989b,landman1996,lasersohn1988,lasersohn1990,lasersohn1995,lasersohn1998,schwarzschild1994,schwarzschild1996}:
 
+\ex. The boxes are heavy.
+\a. The boxes each are heavy. \hfill \textsc{distributive}
+\b. The boxes together are heavy. \hfill \textsc{collective}
+
+When hearing \Last we may infer that each box on its own counts as heavy, as in \Last[a], or only that their total weight is heavy, as in \Last[b].
+%if we hear that \emph{the boxes are heavy}, do we infer that each box is, or only that their total weight warrants comment? 
+What factors go into this determination of meaning?
+
+\ndg{first part of this paragraph seems to jump ahead in the argument...}
 We set as our motivating assumption the idea that context plays \emph{the} key role in disambiguation, both for distributive vs.~collective interpretations, and for ambiguities elsewhere in language. We consider context at three levels: 1) the immediate linguistic context (e.g., the predicate and its plural subject), 2) the specific discourse context (e.g., the epistemic states of speakers and listeners), and 3) the broader world context (e.g., information about the properties under discussion and the objects said to hold them). To see context at work in plural predication, we focus on the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates (e.g., \emph{heavy}) readily admit collective construals, whiles others (e.g., \emph{big}) do not. Current descriptions of the phenomenon treat it as a simple lexical distinction, an accident of semantics. We will see, however, that getting clear on the role of context in plural predication provides a ready explanation of stubborn distributivity while informing the semantics of plural predication and the pragmatic mechanisms of ambiguity resolution. The question becomes, then, what aspects of context permit collective interpretations for predicates like \emph{heavy}, but preclude them for predicates like \emph{big}?
 %But first, some more background on the semantics and pragmatics of plurality.
 
-To address the issue of how (and how much) plural predication depends on context, we establish a way of studying plural predication experimentally. In Expt.~1, we introduce and validate a new paraphrase methodology, which probes possible interpretations with unambiguous paraphrases. The results of Expt.~1 demonstrate a difference between \emph{big} and \emph{heavy}, as expected, but unexpectedly the stubbornly distributive predicate \emph{tall} patterns with \emph{heavy} in its ability to yield collective interpretations. We take these findings as evidence that stubborn distributivity might not be so stubborn after all, and that simple lexical distinction fails to do justice to the facts. %If it could, we should find \emph{tall} patterning with \emph{big}.
+To address the issue of how (and how much) plural predication depends on context, we establish a way of studying plural predication experimentally. In Expt.~1, we introduce and validate a new methodology, which probes possible interpretations with unambiguous paraphrases. The results of Expt.~1 demonstrate a difference between \emph{big} and \emph{heavy}, as expected, but unexpectedly the stubbornly distributive predicate \emph{tall} patterns with \emph{heavy} in its ability to yield collective interpretations. We take these findings as evidence that stubborn distributivity might not be so stubborn after all, and that simple lexical distinction fails to do justice to the facts. %If it could, we should find \emph{tall} patterning with \emph{big}.
 
 We extend our paraphrase methodology in Expt.~2 to naturally-occurring examples of plural predication from the British National Corpus and the Google Books Corpus. As in Expt.~1, we continue to observe the complaisant collectivity of \emph{heavy}. However, the role of context comes more sharply into focus: with subject nouns naming objects that suggest a contextually stable collective property (i.e., a predictable collective size or shape), stubbornly distributive \emph{small} and \emph{big} yield greater rates of collective interpretations. 
 
 Following up on our corpus findings, we then explore the idea that contextual predictability of the relevant collective property is a critical factor in determining which reading is intended. Expt.~3 uses the paraphrase endorsement methodology to show that less variable contexts increase the predictability of potentially noisy collective interpretations%(e.g., always stacking objects on top of each other, regularizing the collective height of sets)
-, and, as a result, make collective interpretations more probable. To understand why and how context  influences the interpretation of plural predication, we formalize its contribution under a pragmatic account of ambiguity resolution in plural predication, using a lifted-variable variant of a Bayesian Rational Speech-Act model \citep[e.g.,][]{frankgoodman2012,lassitergoodman2013}. The success of this model supports the hypotheses that informed it, hypotheses to which we turn next.
+, and, as a result, make collective interpretations more probable. To understand why and how context  influences the interpretation of plural predication, we formalize its contribution under a pragmatic account of ambiguity resolution in plural predication, using a variant of the Rational Speech-Acts model \citep[e.g.,][]{frankgoodman2012,lassitergoodman2013}. The model explains the patterns of our data well, supporting the underlying hypotheses; hypotheses to which we turn next.
 
 
 
@@ -147,13 +163,15 @@ Following up on our corpus findings, we then explore the idea that contextual pr
 %
 %\subsection{Stubborn distributivity}
 
+\ndg{Oy, this section is still long and meandering. it should be half this length.}
+
 Composing with a plurality, some gradable predicates either receive a {distributive} or a {collective} interpretation. Under a distributive reading, \Next[a], the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \Next[b], we ascribe the property to the subject as a whole.
 
 \ex. The boxes are heavy.
 \a. The boxes each are heavy. \hfill \textsc{distributive}
 \b. The boxes together are heavy. \hfill \textsc{collective}
 
-In this latter case, where we collectively ascribe a gradable property directly to a plurality, the resulting interpretation involves sum-based aggregation strategies: if a set of boxes together holds the property of being heavy, it follows that their total weight counts as heavy \citep{scha1984}.\footnote{For now we set aside the possibility of mean-based aggregation strategies, demonstrated for plural comparisons of size by \cite{scontrasetal2012}. Given the effect of contextual predictability on sum-based aggregation strategies that we herewith elucidate, the previously demonstrated mean-based strategies likely result from an experimental context that suggested collective interpretations for \emph{bigger} and a recognition on the part of participants that average size was sufficiently predictable in that context.} The reading becomes more transparent when we add a collective particle like \emph{together}, as in \Last[b]. Crucially, a collective reading can be true when the distributive reading is false: many light boxes may together count as heavy. These two diverging interpretations suggest a semantics for the gradable predicate \emph{heavy} under which it applies both to singular objects and pluralities in its basic denotation; it is a mixed predicate (cf.~the example \emph{build a raft} from \citealp{link1983}). 
+In this latter case, where we collectively ascribe a gradable property directly to a plurality, the resulting interpretation involves sum-based aggregation strategies: if a set of boxes together holds the property of being heavy, it follows that their total weight counts as heavy \citep{scha1984}.\footnote{For now we set aside the possibility of mean-based aggregation strategies, demonstrated for plural comparisons of size by \cite{scontrasetal2012}. Given the effect of contextual predictability on sum-based aggregation strategies that we herewith elucidate, the previously demonstrated mean-based strategies likely result from an experimental context that suggested collective interpretations for \emph{bigger} and a recognition on the part of participants that average size was sufficiently predictable in that context. \ndg{perhaps move this to discussion and discuss more transparently?}} The reading becomes more transparent when we add a collective particle like \emph{together}, as in \Last[b]. Crucially, a collective reading can be true when the distributive reading is false: many light boxes may together count as heavy. These two diverging interpretations suggest a semantics for the gradable predicate \emph{heavy} under which it applies both to singular objects and pluralities in its basic denotation; it is a mixed predicate (cf.~the example \emph{build a raft} from \citealp{link1983}). 
 
 The collective interpretation available to \emph{heavy} proves elusive for most other gradable predicates. A speaker is hard-pressed to use the sentence in \Next to say of the boxes that their total size is large.
 
@@ -200,7 +218,8 @@ In his discussion of the contrast, \citet{quine1960} describes stubbornly distri
 %
 %Refining the description of stubborn distributivity, it would appear that these predicates presuppose the (at least conceptual) atomicity of their arguments: we have to know what physically counts as an atom in order to distribute some physical property to it. The general mechanism remains the same: stubbornly distributive predicates refuse all but individual objects from their basic denotations.
 
-But stating that stubbornly distributive predicates do not contain in their basic denotations pluralities of individuals (in line with notionally distributive predicates like \emph{have blue eyes} or \emph{be a man}; \citealp{link1983}) serves merely to describe the phenomenon, not to explain it. Having blue eyes or being a man are properties that necessarily hold of individuals, hence their mandatory distributivity; collective size is not such a property, at least not transparently so. There is no conceptual barrier to attributing some size directly to a plurality of individuals. Collective nouns bring this point into focus: if a group of men has blue eyes, then each member must; if a pile of boxes counts as tall, we make no direct claim about individual box heights.
+But stating that stubbornly distributive predicates do not contain in their basic denotations pluralities of individuals (in line with notionally distributive predicates like \emph{have blue eyes} or \emph{be a man}; \citealp{link1983}) serves merely to describe the phenomenon, not to explain it. \ndg{awk}
+Having blue eyes or being a man are properties that necessarily hold of individuals, hence their mandatory distributivity; collective size is not such a property, at least not transparently so. There is no conceptual barrier to attributing some size directly to a plurality of individuals. Collective nouns bring this point into focus: if a group of men has blue eyes, then each member must; if a pile of boxes counts as tall, we make no direct claim about individual box heights.
 
 \ex. \a. The group of men has blue eyes. 
 \b. The pile of boxes is tall.
@@ -243,13 +262,15 @@ To test these various predictions concerning the role of context in plural predi
 
 \section{Experiment 1: Validating the paraphrase methodology}
 
-One way to access interpretations of ostensibly ambiguous plural predications is to elicit ratings of unambiguous paraphrases. We construct these paraphrases using distributive \emph{each} and collective \emph{together}, as in \Next.
+One way to access interpretations of potentially ambiguous plural predications is to elicit ratings of unambiguous paraphrases. We construct these paraphrases using distributive \emph{each} and collective \emph{together}, as in \Next.
 
 \ex. \label{bare}The boxes were big/heavy/tall.
 \a.\label{each} The boxes \textbf{each} were big/heavy/tall.
 \b.\label{together} The boxes \textbf{together} were big/heavy/tall.
 
-Although many theorists assume the success of these disambiguating particles \citep[e.g.,][]{schwarzschild1994}, we do our due diligence and first establish that these are in fact unambiguous paraphrases in the context of our experimental paradigm. To do so, we used a reference task. In this task, we begin to explore the role of context by privileging certain epistemic states of speakers, according to whether they are more or less likely to have access to distributive vs.~collective information.
+Although many theorists assume the success of these disambiguating particles \citep[e.g.,][]{schwarzschild1994}, diligence is due: we must establish that these are in fact unambiguous paraphrases in the context of our experimental paradigm. We do so by asking participants to choose between two collections as the referent of each phrase \ref{bare}, \ref{each}, and \ref{together}; the objects in one collection had the property individually (but not collectively), while the other collection had the property (but the individuals in it did not).
+We expect the two disambiguated phrases to lead to robust selection of the corresponding collection, while selections for the ambiguous phrase will indicate preferences for its interpretation.
+In addition we begin to explore the role of context by manipulating the plausible knowledge of the speaker: whether he is likely to have access to the relevant information about each object, or only about the collection.
 
 \subsection{Participants}
 
@@ -258,7 +279,7 @@ We recruited 50 participants through Amazon.com's Mechanical Turk crowd-sourcing
 
 \subsection{Design and methods}
 
-Participants were introduced to Cubert, a worker in a box factory. Between participants, the context scenario either had Cubert ``move'' or ``inspect'' the boxes that he received from a dispenser. In ``move'' scenarios, Cubert appeared with a cart positioned under the dispenser (Fig.~\ref{expt1context}, left); in ``inspect'' scenarios, there was no cart (Fig.~\ref{expt1context}, right). Participants were told that after moving/inspecting a shipment of boxes, Cubert told his friend Dot about the boxes he moved/inspected. Their task was to help Dot decide which boxes Cubert was referring to with his utterance. Participants chose between two sets of boxes, one that implied a collective interpretation of the utterance (Fig.\ \ref{expt1trial}, left) and one that implied a distributive interpretation (Fig.\ \ref{expt1trial}, right).
+Participants were introduced to Cubert, a worker in a box factory. Between participants, the context scenario either had Cubert ``move'' or ``inspect'' the boxes that he received from a dispenser. In ``move'' scenarios, Cubert appeared with a cart positioned under the dispenser (Fig.~\ref{expt1context}, left); in ``inspect'' scenarios, there was no cart (Fig.~\ref{expt1context}, right). Participants were told that after moving/inspecting a shipment of boxes, Cubert told his friend Dot about the boxes he moved/inspected. Their task was to help Dot decide which boxes Cubert was referring to with his utterance. Participants chose between two sets of boxes, one that implied a collective interpretation of the utterance (five small boxes, Fig.\ \ref{expt1trial}, left) and one that implied a distributive interpretation (two large boxes which were together smaller than the five, Fig.\ \ref{expt1trial}, right).
 
 \begin{figure}[h]
 	\centering
@@ -279,13 +300,16 @@ Participants were introduced to Cubert, a worker in a box factory. Between parti
 
 If \emph{each} and \emph{together} are clear disambiguators for plural predication, we should should find a split in the choice of referent depending on which of these words appears. Encountering distributive \emph{each}, as in \ref{each}, participants should choose the distributive referent (Fig.~\ref{expt1trial}, right); with collective \emph{together}, \ref{together}, participants should choose the collective referent (Fig.~\ref{expt1trial}, left). 
 
-For the potentially ambiguous bare utterances, stubbornly distributive \emph{big} ought to always prefer distributive referents. If predicating size and shape determines stubborn distributivity, \emph{tall} should pattern with \emph{big} in its stubborn distributivity. Given that size and height are visually assessable properties, the scenario manipulation should have no effect on Cubert's epistemic state, and therefore no effect on the resulting interpretations for bare \emph{big} and \emph{tall}. For complaisantly collective \emph{heavy}, we should find higher rates of collective referent choice for the bare utterance. And given that Cubert would need to lift individual boxes to assess their individual weight, to the extent that we find any effect of our scenario manipulation, we should we should find it for \emph{heavy}: moving all of the boxes (as opposed to inspecting each box) would yield higher rates of collective referent choice; without lifting each box, Cubert would lack the knowledge needed to verify a distributive interpretation.
+For the potentially ambiguous bare utterances, stubbornly distributive \emph{big} ought to always prefer distributive referents, while complaisantly collective \emph{heavy} should be split. If predicates of size and shape are always stubbornly distributivity, \emph{tall} should pattern with \emph{big}. Given that size and height are visually assessable properties, the scenario manipulation should have no effect on Cubert's epistemic state, and therefore no effect on the resulting interpretations for bare \emph{big} and \emph{tall}. 
+%For complaisantly collective \emph{heavy}, we should find higher rates of collective referent choice for the bare utterance. 
+However, given that Cubert would need to lift individual boxes to assess their individual weight we should find an effect of scenario for \emph{heavy}: moving all of the boxes (as opposed to inspecting each box) would yield higher rates of collective referent choice; without lifting each box, Cubert would lack the knowledge needed to be justified in using a distributive interpretation.
 
 \subsection{Results}
 
 Results were coded in terms of whether participants chose the collective referent, and therefore the collective interpretation for Cubert's statement to Dot. Fig.\ \ref{results2} displays the proportion of collective choices, with bootstrapped 95\% confidence intervals drawn from 10,000 samples of the data \citep{diciccioefron1996}; a value of 1 indicates that participants chose the collective referent 100\% of the time.
 
-To evaluate the disambiguating potential of our paraphrases, we first look at responses to these paraphrases, to the exclusion of the bare utterance. Mean proportion of collective referent choice for collective paraphrases with \emph{together} was 85\% (i.e., near ceiling); for distributive paraphrases with \emph{each} this proportion was 10\% (i.e., near floor). We fit a mixed effects logistic regression model \citep{baayenetal2008} using the \emph{lme4} package \citep{batesetal2014} in \emph{R}, predicting referent choice by \textsc{utterance} (``each,'' ``together''), as well as \textsc{trial} order.  The model included random intercepts for participants, predicates, and scenarios, as well as random slopes for participants grouped by \textsc{utterance} (i.e., the maximal random effects structure supported by the data). The full regression model appears in Appendix \ref{expt1results}. The model finds a main effect of \textsc{utterance} ($\beta$ = 5.50, $SE$ = 0.94, $z$ = 5.87, p $<$ 0.001) such that collective \emph{together} yielded greater rates of collective referent choice than distributive \emph{each}; the effect of \textsc{trial} was not significant ($\beta$ = 0.06, $SE$ = 0.08, $z$ = 0.81, p $=$ 0.42). Thus, the ``together'' utterances yielded collective referent choices, and the ``each'' utterances did not.
+To evaluate the disambiguating potential of our paraphrases, we first look at responses to these paraphrases, excluding the bare utterance. Mean proportion of collective referent choice for collective paraphrases with \emph{together} was 85\% (i.e., near ceiling); for distributive paraphrases with \emph{each} this proportion was 10\% (i.e., near floor). We fit a mixed effects logistic regression model \citep{baayenetal2008} using the \emph{lme4} package \citep{batesetal2014} in \emph{R}, predicting referent choice by \textsc{utterance} (``each,'' ``together''), as well as \textsc{trial} order.  The model included random intercepts for participants, predicates, and scenarios, as well as random slopes for participants grouped by \textsc{utterance} (i.e., the maximal random effects structure supported by the data). The full regression model appears in Appendix \ref{expt1results}. The model finds a main effect of \textsc{utterance} ($\beta$ = 5.50, $SE$ = 0.94, $z$ = 5.87, p $<$ 0.001) such that collective \emph{together} yielded greater rates of collective referent choice than distributive \emph{each}; the effect of \textsc{trial} was not significant ($\beta$ = 0.06, $SE$ = 0.08, $z$ = 0.81, p $=$ 0.42). Thus, the ``together'' utterances yielded collective referent choices, and the ``each'' utterances did not.
+\ndg{should we have predicate be a predictor here so that we can report (whether) the predicate didn't affect choice for the fully dissambiguated phrases?}
 
 To evaluate the behavior of the predicates in the absence of the disambiguating particles, together with the effect of our scenario manipulation, we next consider responses to the bare, potentially ambiguous utterance. We fit a mixed effects logistic regression model predicting referent choice by \textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}), \textsc{scenario} (``move,'' ``inspect''), and \textsc{trial} order. We dummy coded the \textsc{predicate} predictor, with \emph{big} as the reference level. The model included random intercepts and slopes for participants (grouped by \textsc{trial}; the maximal random effects structure supported by the data). The full regression model appears in Appendix \ref{expt1results}. The model finds main effects of \textsc{predicate} for both the \emph{heavy} ($\beta$ = 3.05, $SE$ = 1.23, $z$ = 2.48, p $<$ 0.05) and the \emph{tall} ($\beta$ = 3.63, $SE$ = 1.29, $z$ = 2.82, p $<$ 0.01) contrasts. Compared to \emph{big}, the other predicates yielded greater rates of collective referent choice in ``bare'' utterances. While the effect of \textsc{scenario} did not reach significance, we note the trend in Fig.~\ref{results2} whereby ``move'' scenarios tended to have higher rates of collective referent choice for bare \emph{heavy} utterances (34\% ``move'' vs.~14\% ``inspect''); a post-hoc test of this difference approaches significance ($t$ = -1.70, \emph{df} = 47.96, $p$ = 0.096).
 
@@ -302,9 +326,9 @@ To evaluate the behavior of the predicates in the absence of the disambiguating 
 
 The disambiguating paraphrases behave as expected: \emph{each} delivers a distributive interpretation and \emph{together} delivers a collective one. We also find that the bare form of \emph{big} patterns differently from \emph{heavy} and \emph{tall}---it is more distributive. This finding is expected with respect to \textit{big} vs.~\textit{heavy} (the former should be stubbornly distributive), but surprising given the behavior of \textit{tall}: both \emph{tall} and \emph{big} are predicates of size and shape. If naming properties of physical extent mediates the choice between distributive and collective interpretations of plural predications, we should find that \emph{tall} patterns with \emph{big}. Equally damning is the comparison between \emph{tall} and \emph{heavy}: if anything, \emph{tall} more consistently delivers collective interpretations. What allows \emph{tall} to readily receive collective interpretations---while precluding them for \emph{big}---in our experimental context? 
 
-As discussed above, one candidate factor is the contextual predictability of the collective property: how easy it is for speakers and listeners to arrive at the same collective property for a given set of objects. We have seen that collective weight is a stable property of sets, which stands to explain the complaisance of \emph{heavy} toward collective interpretations. In the context of the current experiment, collective height is also predictable: boxes  appeared stacked one on top of the other, yielding stable total set heights. Collective size, however, could vary depending on the strategy used to evaluate it (height? width? area? volume?) as well as on the arrangement of the objects said to hold it, thus accounting for the lack of collective interpretations for bare \emph{big}. In Expt.~3, we use the paraphrase methodology to directly investigate the role of contextual predictability in plural predication.
+As discussed above, one candidate factor is the contextual predictability of the collective property: how easy it is for speakers and listeners to arrive at the same collective property for a given set of objects. We have seen that collective weight is a stable property of sets, which stands to explain the complaisance of \emph{heavy} toward collective interpretations. In the context of the current experiment, collective height is also predictable: boxes  always appeared stacked one on top of the other, yielding stable total set heights. Collective size, however, could vary depending on the strategy used to evaluate it (height? width? area? volume?) as well as on the arrangement of the objects said to hold it, thus accounting for the lack of collective interpretations for bare \emph{big}. In Expt.~3, we use the paraphrase methodology to directly investigate the role of contextual predictability in plural predication.
 
-The results of the current experiment also highlight the role of speaker knowledge in plural predication: based solely on whether the context scenario had Cubert move vs.~inspect the boxes he received, we see a trend whereby bare \emph{heavy} received more or less collective interpretations, respectively. The absence of the effect for \emph{big} and \emph{tall} suggests an explanation in terms of the epistemic state of the speaker: in ``move'' scenarios, the speaker is less likely to have access to individual box weights; the listener is therefore less likely to assume that the speaker, Cubert, intended a distributive interpretation for which he lacks evidence. We follow up on this result with a similar scenario manipulation in Expt.~3.
+The results of the current experiment does not rule out a role of speaker knowledge in plural predication: based solely on whether the context scenario had Cubert move vs.~inspect the boxes he received, we see a trend whereby bare \emph{heavy} received more or less collective interpretations, respectively. The absence of the effect for \emph{big} and \emph{tall} suggests an explanation in terms of the epistemic state of the speaker: in ``move'' scenarios, the speaker is less likely to have access to individual box weights; the listener is therefore less likely to assume that the speaker, Cubert, intended a distributive interpretation for which he lacks evidence. We attempt to confirm this effect with a similar scenario manipulation in Expt.~3.
 
 But before we manipulate contextual predictability and speaker knowledge directly, we extend the paraphrase methodology in Expt.~2 to naturally-occurring examples of plural predication, investigating the role of the local linguistic context.
 
