--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -125,9 +125,10 @@ When hearing \Last we may infer that each box on its own counts as heavy, as in 
 %if we hear that \emph{the boxes are heavy}, do we infer that each box is, or only that their total weight warrants comment? 
 What factors go into this determination of meaning?
 
-\ndg{first part of this paragraph seems to jump ahead in the argument...}
-We set as our motivating assumption the idea that context plays \emph{the} key role in disambiguation, both for distributive vs.~collective interpretations, and for ambiguities elsewhere in language. We consider context at three levels: 1) the immediate linguistic context (e.g., the predicate and its plural subject), 2) the specific discourse context (e.g., the epistemic states of speakers and listeners), and 3) the broader world context (e.g., information about the properties under discussion and the objects said to hold them). To see context at work in plural predication, we focus on the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates (e.g., \emph{heavy}) readily admit collective construals, whiles others (e.g., \emph{big}) do not. Current descriptions of the phenomenon treat it as a simple lexical distinction, an accident of semantics. We will see, however, that getting clear on the role of context in plural predication provides a ready explanation of stubborn distributivity while informing the semantics of plural predication and the pragmatic mechanisms of ambiguity resolution. The question becomes, then, what aspects of context permit collective interpretations for predicates like \emph{heavy}, but preclude them for predicates like \emph{big}?
-%But first, some more background on the semantics and pragmatics of plurality.
+Consider the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates (e.g., \emph{heavy}) readily admit collective construals, whiles others (e.g., \emph{big}) do not. Current descriptions of the phenomenon treat it as a simple lexical distinction, an accident of semantics. 
+\ndg{here briefly note the observation that happily collective properties tend to have stable collective measures...}
+We will see, however, that the role of context in plural predication provides a ready explanation of stubborn distributivity in terms of the predictability, or subjectivity, of the collective reading. 
+More generally, we take as our motivation the idea that context plays \emph{the} key role in disambiguation for distributive vs.~collective interpretations. We consider context at three levels: 1) the immediate linguistic context (e.g., the predicate and its plural subject), 2) the specific discourse context (e.g., the epistemic states of speakers and listeners), and 3) the broader world context (e.g., information about the properties under discussion and the objects said to hold them). \ndg{smooth out this paragraph some more..}
 
 To address the issue of how (and how much) plural predication depends on context, we establish a way of studying plural predication experimentally. In Expt.~1, we introduce and validate a new methodology, which probes possible interpretations with unambiguous paraphrases. The results of Expt.~1 demonstrate a difference between \emph{big} and \emph{heavy}, as expected, but unexpectedly the stubbornly distributive predicate \emph{tall} patterns with \emph{heavy} in its ability to yield collective interpretations. We take these findings as evidence that stubborn distributivity might not be so stubborn after all, and that simple lexical distinction fails to do justice to the facts. %If it could, we should find \emph{tall} patterning with \emph{big}.
 
